<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity"
    android:background="@color/green_light">


    <Button
        android:id="@+id/btGoogleRepos"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:text="@string/google_repos"
        android:background="@drawable/gradient_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAvatarList" />

    <Button
        android:id="@+id/btRandomEmoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_emoji"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398"
        tools:visibility="visible"
        android:background="@drawable/gradient_button"/>

    <EditText
        android:id="@+id/etTodoTitle"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:autofillHints=""
        android:hint="@string/enter_todo_title"
        android:textColorHint="#5E220D"
        app:layout_constraintBottom_toTopOf="@+id/btAvatarList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btEmojiList"
        app:layout_constraintVertical_bias="0.754"
        android:inputType="" />

    <Button
        android:id="@+id/btSeartch"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/app_name"
        app:icon="@android:drawable/ic_search_category_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etTodoTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601"
        android:shadowColor="@color/purple_500"
        android:background="@drawable/gradient_button"
        />

    <Button
        android:id="@+id/btEmojiList"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:text="@string/emojilist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRandomEmoji"
        android:background="@drawable/gradient_button"/>

    <Button
        android:id="@+id/btAvatarList"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/avatar_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722"
        android:background="@drawable/gradient_button"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/enter_the_name_here"
        app:layout_constraintBottom_toTopOf="@+id/btRandomEmoji"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/like" />


</androidx.constraintlayout.widget.ConstraintLayout>